# D3DShot

./: .gitignore  pyproject.toml
d3dshot/: __init__.py  d3dshot.py  display.py
d3dshot/dll/: dxgi.py  user32.py
